Version 2020.2 - PR-50132 * Added issue citing through CI-analysis report * Changed several class names to match standardized build step names * Added internationalization * Analysis support by kwcheck removed. Analysis support only by 'kwciagent' added. * Fixed problem with 'kwmaven' not working properly * Removed deprecated features * Fix KW Dashboard not showing on job page for pipeline jobs * Changed version enumeration format to match Klocwork release versions